--- a/admin.html
+++ b/admin.html
@@ -1,140 +1,124 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Registrar Compra (Meta CAPI) — Admin</title>
-  <style>
-    :root {
-      --bg:#080808;
-      --panel:#151515;
-      --accent:#4db8ff;
-      --muted:#bdbdbd;
-      --success:#8ef08e;
-      --danger:#ff6b6b;
-    }
-    html, body {
-      height:100%; margin:0;
-      font-family: Inter, system-ui, sans-serif;
-      background: var(--bg);
-      color: #fff;
-      display: flex; align-items: center; justify-content: center;
-    }
-    .card {
-      width:100%; max-width:420px;
-      background: var(--panel);
-      border-radius:12px;
-      padding:20px;
-      box-shadow:0 8px 30px rgba(0,0,0,0.6);
-    }
-    h1 { margin-top:0; font-size:20px; color:var(--accent); }
-    label { display:block; margin-top:10px; font-size:14px; color:var(--muted); }
-    input, button { width:100%; box-sizing:border-box; }
-    input {
-      padding:10px; border-radius:8px;
-      border:1px solid rgba(255,255,255,0.1);
-      background:#111; color:#fff; font-size:15px;
-    }
-    button {
-      margin-top:14px; padding:12px; border-radius:10px;
-      border:none; background:var(--accent);
-      color:#000; font-weight:700; cursor:pointer; font-size:15px;
-    }
-    #response {
-      margin-top:14px; background:#0b0b0b; padding:12px;
-      border-radius:8px; color:var(--success);
-      font-family:monospace; white-space:pre-wrap;
-      max-height:220px; overflow:auto;
-    }
-    .hidden { display:none; }
-    .modal {
-      position:fixed; inset:0; background:rgba(0,0,0,0.7);
-      display:flex; align-items:center; justify-content:center;
-    }
-    .modal .mcard {
-      background:#111; padding:20px; border-radius:10px; width:300px;
-    }
-  </style>
-</head>
-<body>
-  <!-- LOGIN -->
-  <div id="loginModal" class="modal">
-    <div class="mcard">
-      <h2 style="color:var(--accent)">Acceso Administrador</h2>
-      <input id="adminPasswordInput" type="password" placeholder="Contraseña" />
-      <button id="btnLogin">Entrar</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Registrar Compra (Meta CAPI)</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background: #121212;
+        color: #f1f1f1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        flex-direction: column;
+        margin: 0;
+      }
+      .container {
+        background: #1e1e1e;
+        padding: 20px;
+        border-radius: 12px;
+        width: 340px;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
+      }
+      input,
+      button {
+        width: 100%;
+        padding: 10px;
+        margin: 6px 0;
+        border: none;
+        border-radius: 6px;
+      }
+      input {
+        background: #2b2b2b;
+        color: #fff;
+      }
+      button {
+        background: #3b82f6;
+        color: #fff;
+        cursor: pointer;
+        font-weight: bold;
+      }
+      button:hover {
+        background: #2563eb;
+      }
+      #response {
+        margin-top: 10px;
+        font-size: 0.9em;
+        word-wrap: break-word;
+        white-space: pre-wrap;
+      }
+      #login {
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container" id="login">
+      <h2>Acceso restringido</h2>
+      <input type="password" id="password" placeholder="Contraseña" />
+      <button onclick="login()">Entrar</button>
+      <p id="login-error" style="color: red;"></p>
     </div>
-  </div>
 
-  <!-- PANEL -->
-  <div class="card" id="adminCard" style="display:none">
-    <h1>Registrar Compra (Meta CAPI)</h1>
-    <form id="purchaseForm">
-      <label>Email del comprador</label>
-      <input type="email" id="email" placeholder="ej: cliente@mail.com" required />
-      <label>Teléfono del comprador (+549...)</label>
-      <input type="text" id="phone" placeholder="+5491122334455" required />
-      <label>Monto en ARS</label>
-      <input type="number" id="amount" placeholder="26000" required />
-      <label>Fecha y hora (opcional)</label>
+    <div class="container" id="form-container" style="display:none;">
+      <h2>Registrar Compra (Meta CAPI)</h2>
+      <input type="text" id="nombre" placeholder="Nombre del comprador" />
+      <input type="text" id="apellido" placeholder="Apellido del comprador" />
+      <input type="text" id="phone" placeholder="Teléfono (+5491122334455)" />
+      <input type="number" id="amount" placeholder="Monto en ARS (ej: 26000)" />
       <input type="datetime-local" id="event_time" />
-      <button type="submit">Enviar compra a Meta</button>
-    </form>
-    <div id="response" class="hidden"></div>
-  </div>
+      <button onclick="sendPurchase()">Enviar compra a Meta</button>
+      <div id="response"></div>
+    </div>
 
-  <script>
-    const ADMIN_PASSWORD = "45864722";
+    <script>
+      const ADMIN_PASSWORD = "tu_contraseña_aqui"; // <- cámbiala antes de subir
 
-    // login básico
-    const loginModal = document.getElementById('loginModal');
-    const adminCard = document.getElementById('adminCard');
-    document.getElementById('btnLogin').addEventListener('click', ()=>{
-      const v = document.getElementById('adminPasswordInput').value;
-      if (v === ADMIN_PASSWORD) {
-        loginModal.style.display = 'none';
-        adminCard.style.display = 'block';
-      } else {
-        alert('Contraseña incorrecta');
-      }
-    });
-
-    // form handler
-    const form = document.getElementById('purchaseForm');
-    const responseBox = document.getElementById('response');
-
-    form.addEventListener('submit', async e=>{
-      e.preventDefault();
-      responseBox.classList.remove('hidden');
-      responseBox.style.color = 'var(--muted)';
-      responseBox.textContent = '⏳ Enviando compra a Meta...';
-
-      const payload = {
-        email: document.getElementById('email').value.trim(),
-        phone: document.getElementById('phone').value.trim(),
-        amount: document.getElementById('amount').value,
-        event_time: document.getElementById('event_time').value || null
-      };
-
-      try {
-        const res = await fetch('/api/meta-purchase', {
-          method:'POST',
-          headers:{'Content-Type':'application/json'},
-          body:JSON.stringify(payload)
-        });
-        const json = await res.json();
-        if (json && json.metaResponse && json.metaResponse.events_received === 1) {
-          responseBox.style.color = 'var(--success)';
-          responseBox.textContent = '✅ Compra enviada correctamente:\n\n' + JSON.stringify(json.metaResponse, null, 2);
+      function login() {
+        const input = document.getElementById("password").value.trim();
+        if (input === ADMIN_PASSWORD) {
+          document.getElementById("login").style.display = "none";
+          document.getElementById("form-container").style.display = "block";
         } else {
-          responseBox.style.color = 'var(--danger)';
-          responseBox.textContent = '❌ Error:\n' + JSON.stringify(json, null, 2);
+          document.getElementById("login-error").innerText = "Contraseña incorrecta";
         }
-      } catch(err) {
-        responseBox.style.color = 'var(--danger)';
-        responseBox.textContent = '❌ Error de red: ' + err.message;
       }
-    });
-  </script>
-</body>
+
+      async function sendPurchase() {
+        const nombre = document.getElementById("nombre").value.trim();
+        const apellido = document.getElementById("apellido").value.trim();
+        const phone = document.getElementById("phone").value.trim();
+        const amount = document.getElementById("amount").value.trim();
+        const event_time = document.getElementById("event_time").value;
+
+        if (!nombre || !apellido || !phone || !amount) {
+          document.getElementById("response").innerHTML = "❌ Faltan datos obligatorios.";
+          return;
+        }
+
+        try {
+          const res = await fetch("/api/meta-purchase", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ nombre, apellido, phone, amount, event_time }),
+          });
+
+          const data = await res.json();
+          document.getElementById("response").innerHTML =
+            data.success
+              ? `✅ Compra enviada correctamente a Meta\n\n${JSON.stringify(
+                  data.metaResponse,
+                  null,
+                  2
+                )}`
+              : `❌ Error: ${data.error || "desconocido"}`;
+        } catch (err) {
+          document.getElementById("response").innerHTML = "❌ Error de red o servidor.";
+        }
+      }
+    </script>
+  </body>
 </html>
