--- a/index.html
+++ b/index.html
@@ -4,23 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- TÍTULO BLANQUEADO -->
   <title>💎 Imperio Esmeralda</title>
 
-  <!-- META VERIFICACIÓN -->
   <meta name="facebook-domain-verification" content="qx1zho2wixswe5pr0ill7z3aecxjcp" />
 
-  <!-- FUENTES -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600;700;900&family=Russo+One&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600;700;900&family=Russo+One&display=swap" rel="stylesheet"></noscript>
 
-  <!-- CSS -->
   <link rel="stylesheet" href="estilo.css">
   <link rel="icon" type="image/png" href="img/favicon.png">
 
-  <!-- PIXEL META -->
   <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -31,7 +26,7 @@
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
 
-    fbq('init', '1946841772846486');
+    fbq('init', '1946841772846486'); // Tu ID fijo
     fbq('track', 'PageView');
   </script>
 </head>
@@ -45,11 +40,8 @@
     </span>
   </h1>
 
-  <!-- TARJETA PRINCIPAL CON COPY BLANQUEADO -->
   <div class="card" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px);">
     <div class="main-text">
-
-      <!-- COPY CAMBIADO (sin palabras de juego, apuestas, etc.) -->
       <p style="font-family: 'Russo One', sans-serif; font-size: 1.2rem; color: #00ff88; text-transform: uppercase; margin-bottom: 15px;">
         <span style="font-size: 1.3rem;">✨</span>
         EXPERIENCIA PREMIUM 24/7
@@ -59,25 +51,21 @@
       <p style="font-family: 'Poppins', sans-serif; font-size: 1.6rem; color: #FFD700; font-weight: 700; text-transform: uppercase;">
         ACCESO INMEDIATO
       </p>
-
     </div>
 
     <button class="popup-button" id="whatsappButton">
       <span>CREÁ TU USUARIO</span>
-
       <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="white" viewBox="0 0 24 24">
         <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.149-.67.149-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414-.074-.123-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
       </svg>
     </button>
   </div>
 
-  <!-- INFO EXTERNA (BLANQUEADA) -->
   <div class="info-externa" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.2);">
     <p id="minimoDeposito" style="color: #00ff88;"></p>
     <p>EXPERIENCIA PREMIUM • ATENCIÓN 24/7 • ACCESO INMEDIATO Y SEGURO</p>
   </div>
 
-  <!-- MÉTODOS DE PAGO (SIN CAMBIOS) -->
   <div class="metodos-pago" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.2);">
     <h2 class="titulo-pago">MÉTODOS DE PAGO</h2>
     <div class="iconos-pago">
@@ -88,7 +76,6 @@
     </div>
   </div>
 
-  <!-- SCRIPT ORIGINAL (sin modificar lógicas técnicas) -->
   <script>
     const WHATSAPP_NUMBER = "5492236735372";
     const SHEET_URL = "https://script.google.com/macros/s/AKfycbwyADs1Mu32qEnFhwV4ySNK6Uaa3WzaCkDU_o3xFnhgMvXxvZcE3Pps6EGRguwyFhqq/exec";
@@ -157,19 +144,26 @@
       btn.disabled = true;
       btn.querySelector("span").textContent = "CARGANDO...";
 
+      // 1. CAPTURAR DATOS DEL ANUNCIO (NUEVO)
+      const urlParams = new URLSearchParams(window.location.search);
+      const ad_name = urlParams.get('utm_content') || "Organico/Desconocido";
+      const campaign_name = urlParams.get('utm_campaign') || "Desconocido";
+
       const fbp = ensureFBP();
       const fbc = ensureFBC();
-
       const click_id = getOrCreateClickID();
       const event_id = "contact-" + click_id;
       const timestamp = new Date().toISOString();
 
+      // Disparo del Pixel
       if (typeof fbq !== "undefined") {
         fbq("track", "Contact", {}, { eventID: event_id });
       }
 
-      safeSend({ click_id, fbp, fbc, event_id, timestamp });
+      // 2. ENVÍO AL EXCEL (Incluye nombre de anuncio)
+      safeSend({ click_id, fbp, fbc, event_id, timestamp, ad_name, campaign_name });
 
+      // 3. MENSAJE DE WHATSAPP (Sin emoji, directo)
       const message = `Hola! Quiero cargar con el 20% extra. (Ref: ${click_id})`;
       window.open(`https://wa.me/${WHATSAPP_NUMBER}?text=${encodeURIComponent(message)}`, "_blank");
 
@@ -187,7 +181,3 @@
 
 </body>
 </html>
-
-
-
-
